# gtc-control

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
config/: default.yml
docs/: Ethernet_Module_Setup.md  Oasis_Registers.md  Wirenboard_Integration.md
src/: app.rs  config.rs  domain.rs  lib.rs  main.rs  modbus.rs  status.rs  tui.rs
